--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Googlepoint</title>
+    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <%= stylesheet_link_tag :all %>
     <%= yield :stylesheets %>
     <%= csrf_meta_tag %>
