--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Googlepoint</title>
+    <title><%= t(:app) -%></title>
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <%= stylesheet_link_tag :all %>
     <%= yield :stylesheets %>
     <%= csrf_meta_tag %>
   </head>
   <body>
+    <%= render_flash_messages %>
     <%= yield %>
     <%= javascript_include_tag :defaults %>
     <%= yield :javascripts %>
