Some really basic specs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
+    <div style="background: blue">test</div>
     <%= render_flash_messages %>
     <%= yield %>
     <%= javascript_include_tag :defaults %>
