Lots of style changes, more coming shortly. Now has rollup effects for errors and notices

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,11 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
+    <%= render :partial => 'layouts/header' %>
     <%= render_flash_messages %>
+    <div id="content">
     <%= yield %>
+    </div>
     <%= javascript_include_tag :defaults %>
     <%= yield :javascripts %>
   </body>
