--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,1 @@
-<h1>GooglePoint</h1>
-<p>This is just the beginning.</p>
-<%- if logged_in? %>
-<p><%= link_to t(:logout), '/logout' %></p>
-<%- else -%>
-<p><%= link_to t(:login_with_google), '/auth/google' %></p>
-<%- end -%>
+<p>Details about your app go here.</p>
