--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title><%= t(:app) -%></title>
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link href='http://fonts.googleapis.com/css?family=Tienne&v2' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag :all %>
     <%= yield :stylesheets %>
     <%= csrf_meta_tag %>
