--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -1,11 +1,26 @@
+* {
+  font-family: Verdana, Helvetica, Arial, sans-serif;
+}
+
 body {
   padding: 0;
   margin: 0;
+  background-color: white;
 
   #header {
     padding: 12px;
-    font-weight: bold;
-    border-bottom: 1px solid black;
+    background-color: #d0d9d6;
+    color: white;
+    border-bottom: 1px solid #9ca6a2;
+    
+    a, a:link, a:visited {
+      text-decoration: none;
+      color: #212625;
+    }
+    
+    a:active, a:hover {
+      color: #bf0404;
+    }
     
     .right {
      float: right;
@@ -13,14 +28,6 @@ body {
     
     .left {
       float: left;
-    }
-    
-    a, a:link, a:visited {
-      text-decoration: none;
-    }
-    
-    a:active, a:hover {
-      
     }
   }
 
@@ -36,12 +43,5 @@ body {
 .error, .notice {
   padding: 12px;
   color: white;
-}
-
-.error {
-  background-color: red;
-}
-
-.notice {
-  background-color: green;
+  background-color: #bf0404;
 }
