--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -41,7 +41,8 @@ body {
 }
 
 .error, .notice {
-  padding: 12px;
+  padding: 8px 12px;
+  font-size: 11px;
   color: white;
   background-color: #bf0404;
 }
