--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,6 +26,7 @@ body {
   clear: both; }
 
 .error, .notice {
-  padding: 12px;
+  padding: 8px 12px;
+  font-size: 11px;
   color: white;
   background-color: #bf0404; }
