Added lots of specs around users, now have profile pages and basic editing. Formtastic was also brought in for easier form creation

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <b><%= link_to t(:app), root_path %></b>
   </div>
   <div class="right">
-    <%= (current_user.name + ' - ' + (link_to t(:logout), logout_path)).html_safe if logged_in? -%>
+    <%= (link_to(current_user.name, user_path(current_user)) + ' - ' + (link_to t(:logout), logout_path)).html_safe if logged_in? -%>
   </div>
   <div class="reset"></div>
 </div>
