Fixed input box borders and padding

--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -35,6 +35,11 @@ body {
 
   #content {
     padding: 12px;
+    
+    input {
+      margin: 3px;
+      padding: 4px;
+    }
   }
   
   #message {
