--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -23,6 +23,9 @@ body {
       float: left; }
   body #content {
     padding: 12px; }
+    body #content input {
+      margin: 3px;
+      padding: 4px; }
   body #message .error, body #message .notice {
     padding: 8px 12px;
     font-size: 11px;
