--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -40,6 +40,13 @@ body {
       margin: 3px;
       padding: 4px;
     }
+    #networks {
+      padding: 5px 5px 0 0;
+      img {
+        padding-right: 4px;
+        vertical-align: middle;
+      }
+    }
   }
   
   #message {
