--- a/app/views/shared/login.html.erb
+++ b/app/views/shared/login.html.erb
@@ -1,3 +1,4 @@
+<p><%= t(:signup) %></p>
 <%= link_to(image_tag('providers/google.png'), '/auth/google') %>
 <%= link_to(image_tag('providers/facebook.png'), '/auth/facebook') %>
 <%= link_to(image_tag('providers/twitter.png'), '/auth/twitter') %>
