--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -21,6 +21,9 @@ body {
   padding: 0;
   margin: 0;
   background-color: white;
+  
+  .right { float: right; }
+  .left { float: left; }
 
   #header {
     padding: 12px;
@@ -37,14 +40,6 @@ body {
     a:active, a:hover {
       background-color: $header-background;
       color: $header-link-hover;
-    }
-    
-    .right {
-     float: right;
-    }
-    
-    .left {
-      float: left;
     }
   }
 
@@ -80,7 +75,6 @@ body {
   #message {
     .error, .notice {
       padding: 8px 12px;
-      font-size: 12px;
     }
     
     .error {
