--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -74,7 +74,7 @@ body {
   
   #message {
     .error, .notice {
-      padding: 8px 12px 0;
+      padding: 8px 12px 2px;
     }
     
     .error {
