--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -63,10 +63,10 @@ body {
       padding: 4px;
     }
     
-    #networks {
-      padding: 5px 5px 0 0;
+    .networks {
+      padding: 5px 5px 10px 0;
       img {
-        padding-right: 4px;
+        padding-right: 6px;
         vertical-align: middle;
       }
     }
