--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -34,10 +34,10 @@ body {
     body #content input {
       margin: 3px;
       padding: 4px; }
-    body #content #networks {
-      padding: 5px 5px 0 0; }
-      body #content #networks img {
-        padding-right: 4px;
+    body #content .networks {
+      padding: 5px 5px 10px 0; }
+      body #content .networks img {
+        padding-right: 6px;
         vertical-align: middle; }
   body #message .error, body #message .notice {
     padding: 8px 12px 2px; }
