--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,25 +11,37 @@ body {
     float: left; }
   body #header {
     padding: 12px;
-    background-color: black;
+    background-color: #45484d;
     color: white;
+    background: #45484d;
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #45484d 0%, black 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #45484d), color-stop(100%, black));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #45484d 0%, black 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #45484d 0%, black 100%);
+    /* Opera11.10+ */
+    background: -ms-linear-gradient(top, #45484d 0%, black 100%);
+    /* IE10+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$header-background', endColorstr='#000000',GradientType=0 );
+    /* IE6-9 */
+    background: linear-gradient(top, #45484d 0%, black 100%);
+    /* W3C */
     border-bottom: 1px solid #222222; }
     body #header a, body #header a:link, body #header a:visited {
       text-decoration: none;
-      background-color: black;
       color: white; }
     body #header a:active, body #header a:hover {
-      background-color: black;
       color: #bf0404; }
   body #content {
     padding: 12px;
     background-color: white; }
     body #content a, body #content a:link, body #content a:visited {
       text-decoration: none;
-      background-color: white;
       color: #bf0404; }
     body #content a:active, body #content a:hover {
-      background-color: white;
       color: #222222; }
     body #content input {
       margin: 3px;
