--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -1,4 +1,4 @@
-$header-background: black;
+$header-background: #45484d;
 $header-border: 1px solid #222;
 $header-text: white;
 $header-link: white;
@@ -29,16 +29,22 @@ body {
     padding: 12px;
     background-color: $header-background;
     color: $header-text;
+    background: $header-background; /* Old browsers */
+    background: -moz-linear-gradient(top, $header-background 0%, #000000 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, $header-background 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, $header-background 0%,#000000 100%); /* Opera11.10+ */
+    background: -ms-linear-gradient(top, $header-background 0%,#000000 100%); /* IE10+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$header-background', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+    background: linear-gradient(top, $header-background 0%,#000000 100%); /* W3C */
     border-bottom: $header-border;
     
     a, a:link, a:visited {
       text-decoration: none;
-      background-color: $header-background;
       color: $header-link;
     }
     
     a:active, a:hover {
-      background-color: $header-background;
       color: $header-link-hover;
     }
   }
@@ -49,12 +55,10 @@ body {
     
     a, a:link, a:visited {
       text-decoration: none;
-      background-color: $content-background;
       color: $content-link;
     }
     
     a:active, a:hover {
-      background-color: $content-background;
       color: $content-link-hover;
     }
     
