Added basic post model, has message and user_id. Added pagination and tagging, as well as a decent default view. Localization was done as things were added

--- a/app/assets/stylesheets/formtastic_changes.css
+++ b/app/assets/stylesheets/formtastic_changes.css
@@ -12,3 +12,5 @@ The following style may be *conditionally* included for improved support on olde
 form.formtastic fieldset ol li fieldset legend { margin-left: -6px;}
 
 --------------------------------------------------------------------------------------------------*/
+
+form.formtastic input, form.formtastic textarea, form.formtastic select { margin:2px; padding:2px; }
