--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,5 @@
 <%= link_to t(:edit, :scope => [:users]), edit_user_path(@user) %> | <%= link_to t(:delete, :scope => [:users]), user_path(@user), :confirm => t(:delete_confirmation), :method => :delete %>
-<p>
-  <b><%= t(:name, :scope => [:formtastic, :labels, :user]) %> -</b>
-  <%= @user.name %>
-</p>
+<h2><%= @user.name %></h2>
 <b><%= t(:connected_networks) %></b>
 <%= connected_networks.html_safe %>
 
