--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<%= link_to t(:view, :scope => [:users]), user_path(@user) %> | <%= link_to t(:delete, :scope => [:users]), user_path(@user), :confirm => t(:delete_confirmation), :method => :delete %>
+<h2><%= t(:edit, :scope => [:users]) %></h2>
 <%= semantic_form_for @user do |form| %>
   <%= form.inputs do %>
     <%= form.input :name %>
