--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
-<%= link_to t(:new, :scope => [:posts]), new_post_path %>
+<%= "#{link_to t(:view_all, :scope => [:posts]), posts_path} | ".html_safe unless params["tag"].blank? %><%= link_to t(:new, :scope => [:posts]), new_post_path %>
 <h2><%= t(:list, :scope => [:posts], :name => current_user.name ) %></h2>
+
+<% if params[:tag].present? %>
+<p>Tag Filter: <%= params[:tag] %></p>
+<% end %>
 
 <% if @posts.empty? %>
 <p><%= t(:none, :scope => [:posts]) %></p>
@@ -8,7 +12,7 @@
 <% @posts.each do |post| %>
 <div class="full_post">
   <p><%= post.message %></p>
-  <p><%= t(:tag_list, :scope => [:formtastic, :labels, :post]) %> <%= post.tag_list %></p>
+  <p><%= t(:tag_list, :scope => [:formtastic, :labels, :post]) %> <%= linked_tag_list(post) %></p>
   <%= link_to t(:view, :scope => [:posts]), post_path(post) %> | 
   <%= link_to t(:edit, :scope => [:posts]), edit_post_path(post) %> | 
   <%= link_to t(:delete, :scope => [:posts]), post_path(post), :confirm => t(:delete_confirmation), :method => :delete %> -
